[gd_scene load_steps=77 format=2]

[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_014.png" type="Texture" id=1]
[ext_resource path="res://Ressources/Asset/Enemie/Zombie/Gauche/Deplacement/tile004.png" type="Texture" id=2]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_022.png" type="Texture" id=3]
[ext_resource path="res://Ressources/Asset/Enemie/Zombie/Gauche/Deplacement/tile003.png" type="Texture" id=4]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_021.png" type="Texture" id=5]
[ext_resource path="res://Ressources/Asset/Enemie/Zombie/Gauche/Deplacement/tile005.png" type="Texture" id=6]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_024.png" type="Texture" id=7]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_028.png" type="Texture" id=8]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_004.png" type="Texture" id=9]
[ext_resource path="res://Ressources/Asset/Enemie/Zombie/Droite/Deplacement/tile001.png" type="Texture" id=10]
[ext_resource path="res://Ressources/Asset/Enemie/Zombie/Droite/Deplacement/tile002.png" type="Texture" id=11]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_017.png" type="Texture" id=12]
[ext_resource path="res://Ressources/Asset/Enemie/Zombie/Droite/Deplacement/tile000.png" type="Texture" id=13]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_023.png" type="Texture" id=14]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_010.png" type="Texture" id=15]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_027.png" type="Texture" id=16]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_029.png" type="Texture" id=17]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_018.png" type="Texture" id=18]
[ext_resource path="res://Ressources/Asset/Enemie/Zombie/Droite/Deplacement/tile005.png" type="Texture" id=19]
[ext_resource path="res://Ressources/Asset/Enemie/Zombie/Gauche/Deplacement/tile002.png" type="Texture" id=20]
[ext_resource path="res://Ressources/Asset/Enemie/Zombie/Gauche/Deplacement/tile001.png" type="Texture" id=21]
[ext_resource path="res://Ressources/Asset/Enemie/Zombie/Gauche/Deplacement/tile000.png" type="Texture" id=22]
[ext_resource path="res://Ressources/Asset/Enemie/Zombie/Droite/Deplacement/tile003.png" type="Texture" id=23]
[ext_resource path="res://Ressources/Asset/Enemie/Zombie/Droite/Deplacement/tile004.png" type="Texture" id=24]
[ext_resource path="res://Scripts/Enemies/Sorciere.gd" type="Script" id=25]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_025.png" type="Texture" id=26]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_000.png" type="Texture" id=27]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_001.png" type="Texture" id=28]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_002.png" type="Texture" id=29]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_003.png" type="Texture" id=30]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_004.png" type="Texture" id=31]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_005.png" type="Texture" id=32]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_006.png" type="Texture" id=33]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_008.png" type="Texture" id=34]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_019.png" type="Texture" id=35]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_005.png" type="Texture" id=36]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_020.png" type="Texture" id=37]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_026.png" type="Texture" id=38]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_009.png" type="Texture" id=39]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_002.png" type="Texture" id=40]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_007.png" type="Texture" id=41]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_011.png" type="Texture" id=42]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_013.png" type="Texture" id=43]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_012.png" type="Texture" id=44]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_015.png" type="Texture" id=45]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_016.png" type="Texture" id=46]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_003.png" type="Texture" id=47]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_006.png" type="Texture" id=48]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_016.png" type="Texture" id=49]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_012.png" type="Texture" id=50]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_024.png" type="Texture" id=51]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_011.png" type="Texture" id=52]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_029.png" type="Texture" id=53]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_019.png" type="Texture" id=54]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_008.png" type="Texture" id=55]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_013.png" type="Texture" id=56]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_015.png" type="Texture" id=57]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_018.png" type="Texture" id=58]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_025.png" type="Texture" id=59]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_026.png" type="Texture" id=60]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_022.png" type="Texture" id=61]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_007.png" type="Texture" id=62]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_009.png" type="Texture" id=63]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_027.png" type="Texture" id=64]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_028.png" type="Texture" id=65]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_017.png" type="Texture" id=66]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_020.png" type="Texture" id=67]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_021.png" type="Texture" id=68]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_023.png" type="Texture" id=69]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_010.png" type="Texture" id=70]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Haut/Deplacement/0_Citizen_Walk_014.png" type="Texture" id=71]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_000.png" type="Texture" id=72]
[ext_resource path="res://Ressources/Asset/Enemie/Sorciere/Bas/Deplacement/0_Citizen_Walk_001.png" type="Texture" id=73]
[ext_resource path="res://Ressources/musicEtSons/sorciere.mp3" type="AudioStream" id=74]

[sub_resource type="CapsuleShape2D" id=1]
radius = 33.5717
height = 4.77368

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 19 ) ],
"loop": true,
"name": "Droite",
"speed": 20.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 62 ), ExtResource( 55 ), ExtResource( 63 ), ExtResource( 70 ), ExtResource( 52 ), ExtResource( 50 ), ExtResource( 56 ), ExtResource( 71 ), ExtResource( 57 ), ExtResource( 49 ), ExtResource( 66 ), ExtResource( 58 ), ExtResource( 54 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 61 ), ExtResource( 69 ), ExtResource( 51 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 53 ) ],
"loop": true,
"name": "Haut",
"speed": 20.0
}, {
"frames": [ ExtResource( 72 ), ExtResource( 73 ), ExtResource( 40 ), ExtResource( 47 ), ExtResource( 9 ), ExtResource( 36 ), ExtResource( 48 ), ExtResource( 41 ), ExtResource( 34 ), ExtResource( 39 ), ExtResource( 15 ), ExtResource( 42 ), ExtResource( 44 ), ExtResource( 43 ), ExtResource( 1 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 35 ), ExtResource( 37 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 14 ), ExtResource( 7 ), ExtResource( 26 ), ExtResource( 38 ), ExtResource( 16 ), ExtResource( 8 ), ExtResource( 17 ) ],
"loop": true,
"name": "Bas",
"speed": 20.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 6 ) ],
"loop": true,
"name": "Gauche",
"speed": 20.0
} ]

[node name="Sorciere" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 25 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Animation" type="AnimatedSprite" parent="."]
position = Vector2( -0.0197158, -0.775525 )
scale = Vector2( 0.0600541, 0.0796936 )
frames = SubResource( 2 )
animation = "Bas"
frame = 9
playing = true

[node name="Spawner" type="Position2D" parent="."]
position = Vector2( 72.2631, -0.787716 )

[node name="Spawner2" type="Position2D" parent="."]
position = Vector2( 1.23575, 68.4641 )

[node name="Spawner3" type="Position2D" parent="."]
position = Vector2( 0.00402832, -65.3292 )

[node name="Spawner4" type="Position2D" parent="."]
position = Vector2( -66.7718, 0.816681 )

[node name="SonRire" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 74 )
volume_db = 15.651
